Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1
-
None
Description
At least xkey.state is ignored and a real (hardware) pressed (mainly "control") modifier skips several keys completely.
Also see
https://www.mail-archive.com/interest@qt-project.org/msg12085.html
https://bugs.kde.org/show_bug.cgi?id=353781
To a certain degree, this can probably be circumvented by using the xtest extension, but nevertheless, this seems like a bug in Qt which may hit if the logical state of an event differs from wherever Qt takes the modifier states (libinput?)
If synthetic events are not meant to be supported, they should at least be dropped altogether and not be interpreted differently
Attachments
Issue Links
- relates to
-
QTBUG-57296 Qt5 Bug: Modifier keys ignored in xlib library (send_event routine)
-
- Closed
-
-
QTBUG-49448 Shift modifier is stripped from keys sent with XSendEvent
-
- Closed
-
For Gerrit Dashboard: QTBUG-48795 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156451,8 | xcb: Use the state of the key event to process it | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
218757,6 | xcb: have a proper detection of key events originating from SendEvent | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |